# duckdb-httpd-log

./: .validate-branch.sh  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  extension_config.cmake  test_raw_mode.md
.github/workflows/: MainDistributionPipeline.yml  Release.yml
docs/: httpd_log_extension_requirements.md  httpd_log_review_guidelines.md  read_httpd_conf.md  read_httpd_log.md  schema.md
src/: httpd_conf_reader.cpp  httpd_log_buffered_reader.cpp  httpd_log_extension.cpp  httpd_log_file_reader.cpp  httpd_log_format_parser.cpp  httpd_log_multi_file_info.cpp  httpd_log_parser.cpp  httpd_log_table_function.cpp
src/include/: httpd_conf_reader.hpp  httpd_log_buffered_reader.hpp  httpd_log_extension.hpp  httpd_log_file_reader.hpp  httpd_log_format_parser.hpp  httpd_log_multi_file_info.hpp  httpd_log_parser.hpp  httpd_log_table_function.hpp
test/data/conf/: httpd.conf
test/sql/: auto_detect.test  httpd_log.test  read_httpd_conf.test  read_httpd_conf_integration.test  read_httpd_log.test  read_httpd_log_combined.test
test/sql/compression/: gzip_files.test
test/sql/core/: basic.test  schema_validation.test
test/sql/directives/: bytes_directives.test  collision.test  column_collision.test  cookie_env_note.test  duplicate_directives.test  duration.test  filename_logid.test  handler.test  ip_address_directives.test  logio.test  original_final.test  port.test  process_thread.test  query_string.test  status_condition.test  timestamp_format.test  typed_headers.test
test/sql/multi_file/: glob_patterns.test
test/sql/parameters/: raw_mode.test
